# slp2mp4-strabitz

./: .gitignore  MANIFEST.in  README.md  config.html  config_renderer.js  index.html  main.js  package.json  renderer.js  setup.cfg  setup.py
slp2mp4/: config.json  config.py  config_windows.json  dolphinrunner.py  ffmpegrunner.py  paths.py  slp-to-mp4.py  slp2mp4.py
slp2mp4/data/: config.json
