[metadata]
name = slp2mp4
version = 2.0.9

[options]
install_requires =
	py-slippi >= 1.6.2
	psutil >= 5.9.1
	natsort >= 8.1.0
	youtube-uploader-selenium >= 0.1.0
	selenium-firefox
python_requires = >= 3.7
package_dir =
	= slp2mp4
include_package_data = True

[options.entry_points]
console_scripts =
	slp2mp4 = slp2mp4:main
